crates/capi/include/edgefirst/schemas.h

/** @brief Opaque builder handle for geometry_msgs_transform_stamped_t messages. */
typedef struct geometry_msgs_transform_stamped_builder_s geometry_msgs_transform_stamped_builder_t;
/** @brief Opaque builder handle for geometry_msgs_twist_stamped_t messages. */
typedef struct geometry_msgs_twist_stamped_builder_s geometry_msgs_twist_stamped_builder_t;
geometry_msgs_twist_stamped_builder_t* geometry_msgs_twist_stamped_builder_new(void);
void geometry_msgs_twist_stamped_builder_free(geometry_msgs_twist_stamped_builder_t* b);
void geometry_msgs_twist_stamped_builder_set_stamp(geometry_msgs_twist_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_twist_stamped_builder_set_frame_id(geometry_msgs_twist_stamped_builder_t* b, const char* s);
void geometry_msgs_twist_stamped_builder_set_linear(geometry_msgs_twist_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_twist_stamped_builder_set_angular(geometry_msgs_twist_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_twist_stamped_builder_encode_into(geometry_msgs_twist_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_accel_stamped_t messages. */
typedef struct geometry_msgs_accel_stamped_builder_s geometry_msgs_accel_stamped_builder_t;
geometry_msgs_accel_stamped_builder_t* geometry_msgs_accel_stamped_builder_new(void);
void geometry_msgs_accel_stamped_builder_free(geometry_msgs_accel_stamped_builder_t* b);
void geometry_msgs_accel_stamped_builder_set_stamp(geometry_msgs_accel_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_accel_stamped_builder_set_frame_id(geometry_msgs_accel_stamped_builder_t* b, const char* s);
void geometry_msgs_accel_stamped_builder_set_linear_acceleration(geometry_msgs_accel_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_accel_stamped_builder_set_angular_acceleration(geometry_msgs_accel_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_accel_stamped_builder_encode_into(geometry_msgs_accel_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_point_stamped_t messages. */
typedef struct geometry_msgs_point_stamped_builder_s geometry_msgs_point_stamped_builder_t;
geometry_msgs_point_stamped_builder_t* geometry_msgs_point_stamped_builder_new(void);
void geometry_msgs_point_stamped_builder_free(geometry_msgs_point_stamped_builder_t* b);
void geometry_msgs_point_stamped_builder_set_stamp(geometry_msgs_point_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_point_stamped_builder_set_frame_id(geometry_msgs_point_stamped_builder_t* b, const char* s);
void geometry_msgs_point_stamped_builder_set_point(geometry_msgs_point_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_point_stamped_builder_encode_into(geometry_msgs_point_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_inertia_stamped_t messages. */
typedef struct geometry_msgs_inertia_stamped_builder_s geometry_msgs_inertia_stamped_builder_t;
geometry_msgs_inertia_stamped_builder_t* geometry_msgs_inertia_stamped_builder_new(void);
void geometry_msgs_inertia_stamped_builder_free(geometry_msgs_inertia_stamped_builder_t* b);
void geometry_msgs_inertia_stamped_builder_set_stamp(geometry_msgs_inertia_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_inertia_stamped_builder_set_frame_id(geometry_msgs_inertia_stamped_builder_t* b, const char* s);
void geometry_msgs_inertia_stamped_builder_set_mass(geometry_msgs_inertia_stamped_builder_t* b, double m);
void geometry_msgs_inertia_stamped_builder_set_com(geometry_msgs_inertia_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_inertia_stamped_builder_set_inertia_tensor(geometry_msgs_inertia_stamped_builder_t* b, double ixx, double ixy, double ixz, double iyy, double iyz, double izz);
int  geometry_msgs_inertia_stamped_builder_encode_into(geometry_msgs_inertia_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_vector3_stamped_t messages. */
typedef struct geometry_msgs_vector3_stamped_builder_s geometry_msgs_vector3_stamped_builder_t;
geometry_msgs_vector3_stamped_builder_t* geometry_msgs_vector3_stamped_builder_new(void);
void geometry_msgs_vector3_stamped_builder_free(geometry_msgs_vector3_stamped_builder_t* b);
void geometry_msgs_vector3_stamped_builder_set_stamp(geometry_msgs_vector3_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_vector3_stamped_builder_set_frame_id(geometry_msgs_vector3_stamped_builder_t* b, const char* s);
void geometry_msgs_vector3_stamped_builder_set_vector(geometry_msgs_vector3_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_vector3_stamped_builder_encode_into(geometry_msgs_vector3_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_pose_stamped_t messages. */
typedef struct geometry_msgs_pose_stamped_builder_s geometry_msgs_pose_stamped_builder_t;
geometry_msgs_pose_stamped_builder_t* geometry_msgs_pose_stamped_builder_new(void);
void geometry_msgs_pose_stamped_builder_free(geometry_msgs_pose_stamped_builder_t* b);
void geometry_msgs_pose_stamped_builder_set_stamp(geometry_msgs_pose_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_pose_stamped_builder_set_frame_id(geometry_msgs_pose_stamped_builder_t* b, const char* s);
void geometry_msgs_pose_stamped_builder_set_position(geometry_msgs_pose_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_pose_stamped_builder_set_orientation(geometry_msgs_pose_stamped_builder_t* b, double x, double y, double z, double w);
int  geometry_msgs_pose_stamped_builder_encode_into(geometry_msgs_pose_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_quaternion_stamped_t messages. */
typedef struct geometry_msgs_quaternion_stamped_builder_s geometry_msgs_quaternion_stamped_builder_t;
geometry_msgs_quaternion_stamped_builder_t* geometry_msgs_quaternion_stamped_builder_new(void);
void geometry_msgs_quaternion_stamped_builder_free(geometry_msgs_quaternion_stamped_builder_t* b);
void geometry_msgs_quaternion_stamped_builder_set_stamp(geometry_msgs_quaternion_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_quaternion_stamped_builder_set_frame_id(geometry_msgs_quaternion_stamped_builder_t* b, const char* s);
void geometry_msgs_quaternion_stamped_builder_set_quaternion(geometry_msgs_quaternion_stamped_builder_t* b, double x, double y, double z, double w);
int  geometry_msgs_quaternion_stamped_builder_encode_into(geometry_msgs_quaternion_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_wrench_stamped_t messages. */
typedef struct geometry_msgs_wrench_stamped_builder_s geometry_msgs_wrench_stamped_builder_t;
geometry_msgs_wrench_stamped_builder_t* geometry_msgs_wrench_stamped_builder_new(void);
void geometry_msgs_wrench_stamped_builder_free(geometry_msgs_wrench_stamped_builder_t* b);
void geometry_msgs_wrench_stamped_builder_set_stamp(geometry_msgs_wrench_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_wrench_stamped_builder_set_frame_id(geometry_msgs_wrench_stamped_builder_t* b, const char* s);
void geometry_msgs_wrench_stamped_builder_set_force(geometry_msgs_wrench_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_wrench_stamped_builder_set_torque(geometry_msgs_wrench_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_wrench_stamped_builder_encode_into(geometry_msgs_wrench_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_pose_with_covariance_stamped_t messages. */
typedef struct geometry_msgs_pose_with_covariance_stamped_builder_s geometry_msgs_pose_with_covariance_stamped_builder_t;
/** @brief Opaque builder handle for geometry_msgs_twist_with_covariance_stamped_t messages. */
typedef struct geometry_msgs_twist_with_covariance_stamped_builder_s geometry_msgs_twist_with_covariance_stamped_builder_t;
/** @brief Opaque builder handle for geometry_msgs_accel_with_covariance_stamped_t messages. */
typedef struct geometry_msgs_accel_with_covariance_stamped_builder_s geometry_msgs_accel_with_covariance_stamped_builder_t;
/** @brief Opaque builder handle for geometry_msgs_polygon_t messages. */
typedef struct geometry_msgs_polygon_builder_s geometry_msgs_polygon_builder_t;
/** @brief Opaque builder handle for geometry_msgs_polygon_stamped_t messages. */
typedef struct geometry_msgs_polygon_stamped_builder_s geometry_msgs_polygon_stamped_builder_t;
/** @brief Opaque builder handle for geometry_msgs_pose_array_t messages. */
typedef struct geometry_msgs_pose_array_builder_s geometry_msgs_pose_array_builder_t;
/** @brief Opaque builder handle for nav_msgs_odometry_t messages. */
typedef struct nav_msgs_odometry_builder_s nav_msgs_odometry_builder_t;
/** @brief Opaque builder handle for mavros_msgs_altitude_t messages. */
typedef struct mavros_msgs_altitude_builder_s mavros_msgs_altitude_builder_t;
/** @brief Opaque builder handle for mavros_msgs_vfrhud_t messages. */
typedef struct mavros_msgs_vfrhud_builder_s mavros_msgs_vfrhud_builder_t;
/** @brief Opaque builder handle for mavros_msgs_estimator_status_t messages. */
typedef struct mavros_msgs_estimator_status_builder_s mavros_msgs_estimator_status_builder_t;
/** @brief Opaque builder handle for mavros_msgs_extended_state_t messages. */
typedef struct mavros_msgs_extended_state_builder_s mavros_msgs_extended_state_builder_t;
/** @brief Opaque builder handle for mavros_msgs_sys_status_t messages. */
typedef struct mavros_msgs_sys_status_builder_s mavros_msgs_sys_status_builder_t;
/** @brief Opaque builder handle for mavros_msgs_state_t messages. */
typedef struct mavros_msgs_state_builder_s mavros_msgs_state_builder_t;
/** @brief Opaque builder handle for mavros_msgs_status_text_t messages. */
typedef struct mavros_msgs_status_text_builder_s mavros_msgs_status_text_builder_t;
/** @brief Opaque builder handle for mavros_msgs_gps_raw_t messages. */
typedef struct mavros_msgs_gps_raw_builder_s mavros_msgs_gps_raw_builder_t;
/** @brief Opaque builder handle for mavros_msgs_timesync_status_t messages. */
typedef struct mavros_msgs_timesync_status_builder_s mavros_msgs_timesync_status_builder_t;