crates/capi/tests/geometry_mavros_builder_smoke.rs

// SPDX-License-Identifier: Apache-2.0
// Copyright © 2026 Au-Zone Technologies. All Rights Reserved.

//! Builder FFI smoke tests for geometry_msgs, nav_msgs/Odometry, and mavros_msgs
//! types added in PR 1. Each test verifies C FFI encode_into output matches the
//! native Rust builder for the same golden field values.

#![allow(non_camel_case_types, clippy::too_many_lines)]

use edgefirst_schemas::builtin_interfaces::Time;
use edgefirst_schemas::geometry_msgs::{
    self, Accel, AccelWithCovariance, Inertia, Point, Point32, Pose, PoseWithCovariance,
    Quaternion, Transform, Twist, TwistWithCovariance, Vector3, Wrench,
};
use edgefirst_schemas::mavros_msgs;
use edgefirst_schemas::nav_msgs;
use std::ffi::CString;
use std::os::raw::c_char;

const STAMP_SEC: i32 = 1234567890;
const STAMP_NSEC: u32 = 123456789;

fn stamp() -> Time {
    Time::new(STAMP_SEC, STAMP_NSEC)
}

fn frame_id_cstr() -> CString {
    CString::new("test_frame").unwrap()
}

fn pose_cov() -> [f64; 36] {
    let mut cov = [0.0_f64; 36];
    for i in 0..6 {
        cov[i * 6 + i] = 0.1 * (i as f64 + 1.0);
    }
    cov[1] = 0.01;
    cov[6] = 0.01;
    cov
}

fn twist_cov() -> [f64; 36] {
    let mut cov = [0.0_f64; 36];
    for i in 0..6 {
        cov[i * 6 + i] = 0.02 * (i as f64 + 1.0);
    }
    cov[7] = 0.001;
    cov
}

fn accel_cov() -> [f64; 36] {
    let mut cov = [0.0_f64; 36];
    for i in 0..6 {
        cov[i * 6 + i] = 0.1 * (i as f64 + 1.0);
    }
    cov[1] = 0.01;
    cov[6] = 0.01;
    cov
}

macro_rules! stamped_setup {
    ($b:expr, $set_stamp:path, $set_frame:path) => {{
        $set_stamp($b, STAMP_SEC, STAMP_NSEC);
        let frame = frame_id_cstr();
        assert_eq!($set_frame($b, frame.as_ptr()), 0);
    }};
}

enum geometry_msgs_point_stamped_builder_t {}
enum geometry_msgs_vector3_stamped_builder_t {}
enum geometry_msgs_pose_stamped_builder_t {}
enum geometry_msgs_quaternion_stamped_builder_t {}
enum geometry_msgs_accel_stamped_builder_t {}
enum geometry_msgs_twist_stamped_builder_t {}
enum geometry_msgs_wrench_stamped_builder_t {}
enum geometry_msgs_inertia_stamped_builder_t {}
enum geometry_msgs_transform_stamped_builder_t {}
enum geometry_msgs_pose_with_covariance_stamped_builder_t {}
enum geometry_msgs_twist_with_covariance_stamped_builder_t {}
enum geometry_msgs_accel_with_covariance_stamped_builder_t {}
enum geometry_msgs_polygon_builder_t {}
enum geometry_msgs_polygon_stamped_builder_t {}
enum geometry_msgs_pose_array_builder_t {}
enum nav_msgs_odometry_builder_t {}
enum mavros_msgs_altitude_builder_t {}
enum mavros_msgs_vfrhud_builder_t {}
enum mavros_msgs_estimator_status_builder_t {}
enum mavros_msgs_extended_state_builder_t {}
enum mavros_msgs_sys_status_builder_t {}
enum mavros_msgs_state_builder_t {}
enum mavros_msgs_status_text_builder_t {}
enum mavros_msgs_gps_raw_builder_t {}
enum mavros_msgs_timesync_status_builder_t {}

extern "C" {
    fn geometry_msgs_point_stamped_builder_new() -> *mut geometry_msgs_point_stamped_builder_t;
    fn geometry_msgs_point_stamped_builder_free(b: *mut geometry_msgs_point_stamped_builder_t);
    fn geometry_msgs_point_stamped_builder_set_stamp(
        b: *mut geometry_msgs_point_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_point_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_point_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_point_stamped_builder_set_point(
        b: *mut geometry_msgs_point_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_point_stamped_builder_encode_into(
        b: *mut geometry_msgs_point_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_vector3_stamped_builder_new() -> *mut geometry_msgs_vector3_stamped_builder_t;
    fn geometry_msgs_vector3_stamped_builder_free(b: *mut geometry_msgs_vector3_stamped_builder_t);
    fn geometry_msgs_vector3_stamped_builder_set_stamp(
        b: *mut geometry_msgs_vector3_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_vector3_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_vector3_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_vector3_stamped_builder_set_vector(
        b: *mut geometry_msgs_vector3_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_vector3_stamped_builder_encode_into(
        b: *mut geometry_msgs_vector3_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_pose_stamped_builder_new() -> *mut geometry_msgs_pose_stamped_builder_t;
    fn geometry_msgs_pose_stamped_builder_free(b: *mut geometry_msgs_pose_stamped_builder_t);
    fn geometry_msgs_pose_stamped_builder_set_stamp(
        b: *mut geometry_msgs_pose_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_pose_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_pose_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_pose_stamped_builder_set_position(
        b: *mut geometry_msgs_pose_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_pose_stamped_builder_set_orientation(
        b: *mut geometry_msgs_pose_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
        w: f64,
    );
    fn geometry_msgs_pose_stamped_builder_encode_into(
        b: *mut geometry_msgs_pose_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_quaternion_stamped_builder_new(
    ) -> *mut geometry_msgs_quaternion_stamped_builder_t;
    fn geometry_msgs_quaternion_stamped_builder_free(
        b: *mut geometry_msgs_quaternion_stamped_builder_t,
    );
    fn geometry_msgs_quaternion_stamped_builder_set_stamp(
        b: *mut geometry_msgs_quaternion_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_quaternion_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_quaternion_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_quaternion_stamped_builder_set_quaternion(
        b: *mut geometry_msgs_quaternion_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
        w: f64,
    );
    fn geometry_msgs_quaternion_stamped_builder_encode_into(
        b: *mut geometry_msgs_quaternion_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_accel_stamped_builder_new() -> *mut geometry_msgs_accel_stamped_builder_t;
    fn geometry_msgs_accel_stamped_builder_free(b: *mut geometry_msgs_accel_stamped_builder_t);
    fn geometry_msgs_accel_stamped_builder_set_stamp(
        b: *mut geometry_msgs_accel_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_accel_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_accel_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_accel_stamped_builder_set_linear_acceleration(
        b: *mut geometry_msgs_accel_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_accel_stamped_builder_set_angular_acceleration(
        b: *mut geometry_msgs_accel_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_accel_stamped_builder_encode_into(
        b: *mut geometry_msgs_accel_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_twist_stamped_builder_new() -> *mut geometry_msgs_twist_stamped_builder_t;
    fn geometry_msgs_twist_stamped_builder_free(b: *mut geometry_msgs_twist_stamped_builder_t);
    fn geometry_msgs_twist_stamped_builder_set_stamp(
        b: *mut geometry_msgs_twist_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_twist_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_twist_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_twist_stamped_builder_set_linear(
        b: *mut geometry_msgs_twist_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_twist_stamped_builder_set_angular(
        b: *mut geometry_msgs_twist_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_twist_stamped_builder_encode_into(
        b: *mut geometry_msgs_twist_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_wrench_stamped_builder_new() -> *mut geometry_msgs_wrench_stamped_builder_t;
    fn geometry_msgs_wrench_stamped_builder_free(b: *mut geometry_msgs_wrench_stamped_builder_t);
    fn geometry_msgs_wrench_stamped_builder_set_stamp(
        b: *mut geometry_msgs_wrench_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_wrench_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_wrench_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_wrench_stamped_builder_set_force(
        b: *mut geometry_msgs_wrench_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_wrench_stamped_builder_set_torque(
        b: *mut geometry_msgs_wrench_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_wrench_stamped_builder_encode_into(
        b: *mut geometry_msgs_wrench_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_inertia_stamped_builder_new() -> *mut geometry_msgs_inertia_stamped_builder_t;
    fn geometry_msgs_inertia_stamped_builder_free(b: *mut geometry_msgs_inertia_stamped_builder_t);
    fn geometry_msgs_inertia_stamped_builder_set_stamp(
        b: *mut geometry_msgs_inertia_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_inertia_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_inertia_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_inertia_stamped_builder_set_mass(
        b: *mut geometry_msgs_inertia_stamped_builder_t,
        m: f64,
    );
    fn geometry_msgs_inertia_stamped_builder_set_com(
        b: *mut geometry_msgs_inertia_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_inertia_stamped_builder_set_inertia_tensor(
        b: *mut geometry_msgs_inertia_stamped_builder_t,
        ixx: f64,
        ixy: f64,
        ixz: f64,
        iyy: f64,
        iyz: f64,
        izz: f64,
    );
    fn geometry_msgs_inertia_stamped_builder_encode_into(
        b: *mut geometry_msgs_inertia_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;
